@@ -1,6 +1,7 @@
 package org.dsa.iot.zwave;
 
 import org.dsa.iot.dslink.node.Node;
+import org.dsa.iot.dslink.node.NodeBuilder;
 import org.dsa.iot.dslink.node.Permission;
 import org.dsa.iot.dslink.node.Writable;
 import org.dsa.iot.dslink.node.actions.Action;
@@ -14,6 +15,7 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.vertx.java.core.Handler;
 import org.vertx.java.core.json.JsonArray;
+import org.zwave4j.Manager;
 import org.zwave4j.Notification;
 import org.zwave4j.ValueGenre;
 import org.zwave4j.ValueId;
@@ -33,51 +35,77 @@ public class ZWaveDevice {
         LOGGER = LoggerFactory.getLogger(ZWaveDevice.class);
     }
 
-    protected Node node, parent;
-    protected long homeId;
-    private ZWaveLink link;
+    private Node node, parent;
+    private long homeId;
     private ZWaveConn conn;
+    private final Manager manager;
 
-    public ZWaveDevice(Node parent, Node child, long homeId, ZWaveLink link, ZWaveConn conn) {
+    public ZWaveDevice(Node parent, Node child, ZWaveConn conn) {
         this.node = child;
-        this.homeId = homeId;
+        this.homeId = conn.getHomeId();
         this.parent = parent;
-        this.link = link;
         this.conn = conn;
+        manager = conn.getManager();
     }
 
+    public String getName() {
+        return node.getName();
+    }
+
+    //add a new data point and value to the node
     protected void addValue (Notification notification) {
         short validClass = notification.getValueId().getCommandClassId();
         // ignore COMMAND_CLASS_BASIC (0x20) as it currently not used for USER access
-        // ignored because the value is removed by ZWave before it is stored as a child
+        // ignored because the value is removed by ZWave before the node stored as a child
+        // which throws and error
         if (validClass > (short) 0x20) {
-            String name = StringUtils.encodeName(conn.manager.getValueLabel(notification.getValueId()).replace("(%)", "(Percent)"));
-            if (name.equals("Unknown")) {
+            String name = StringUtils.encodeName(manager.getValueLabel(notification.getValueId())
+                    .replace("(%)", "(Percent)"));
+            // at least one device has been found to have a data point called "Unknown".
+            // the following if statement corrects the issue for that specific device
+            // other devices with an "Unknown" data point may have a name other than
+            // "Energy" for their point named "Unknown".
+            /*if (name.equals("Unknown")) {
                 LOGGER.info("This is the problem - ZWaveDevice - addValue");
                 name = "Energy";
-            }
+            }*/
             if (!name.isEmpty()) {
-                Node child = node.createChild(name).build();
+                NodeBuilder b = node.createChild(name);
+
                 Value val = new Value(notification.getNodeId());
-                child.setAttribute("nodeId", val);
+                b.setAttribute("nodeId", val);
+
                 val = new Value(notification.getValueId().getCommandClassId());
-                child.setAttribute("cc", val);
+                b.setAttribute("cc", val);
+
                 val = new Value(notification.getGroupIdx());
-                child.setAttribute("group", val);
+                b.setAttribute("group", val);
+
                 val = new Value(notification.getValueId().getInstance());
-                child.setAttribute("instance", val);
+                b.setAttribute("instance", val);
+
                 val = new Value((notification.getValueId().getGenre().name()));
-                child.setAttribute("genre", val);
+                b.setAttribute("genre", val);
+
                 val = new Value(notification.getValueId().getIndex());
-                child.setAttribute("index", val);
+                b.setAttribute("index", val);
+
                 val = new Value(notification.getSceneId());
-                child.setAttribute("scene", val);
+                b.setAttribute("scene", val);
+
                 val = new Value(notification.getButtonId());
-                child.setAttribute("button", val);
-                val = new Value(conn.manager.getValueUnits(notification.getValueId()));
-                child.setAttribute("unit", val);
+                b.setAttribute("button", val);
+
+                val = new Value(manager.getValueUnits(notification.getValueId()));
+                b.setAttribute("unit", val);
+
                 val = new Value(notification.getValueId().getType().name());
-                child.setAttribute("type", val);
+                b.setAttribute("type", val);
+
+                b.setValueType(ValueType.STRING);
+                b.setValue(null);
+                Node child = b.build();
+
                 setValue(notification.getValueId(), child);
 
                 addActions(child);
@@ -86,132 +114,102 @@ public class ZWaveDevice {
         LOGGER.info("Value added - " + notification.getNodeId());
     }
 
-    protected void addAllOnOff() {
-        Action actOn = setAllOnAction();
-        node.createChild("All on").setAction(actOn).build().setSerializable(false);
-
-        Action actOff = setAllOffAction();
-        node.createChild("All off").setAction(actOff).build().setSerializable(false);
-
-        Action actRefresh = controllerRefreshAction();
-        node.createChild("Refresh").setAction(actRefresh).build().setSerializable(false);
-    }
-
-    protected Action controllerRefreshAction() {
-        Action act = new Action(Permission.READ, new ControllerRefreshHandler());
-        return act;
-    }
-
-    private class ControllerRefreshHandler implements Handler<ActionResult> {
-        public void handle(ActionResult event) {
-            conn.restart();
-        }
-    }
-
-    private Action setAllOnAction() {
-        Action act = new Action(Permission.READ, new SetOnHandler());
-        return act;
-    }
-
-    private class SetOnHandler implements Handler<ActionResult> {
-        public void handle(ActionResult event) {
-            conn.manager.switchAllOn(homeId);
-        }
-    }
-
-    private Action setAllOffAction() {
-        Action act = new Action(Permission.READ, new SetOffHandler());
-        return act;
-    }
-
-    private class SetOffHandler implements Handler<ActionResult> {
-        public void handle(ActionResult event) {
-            conn.manager.switchAllOff(homeId);
-        }
-    }
-
+    //action method to set the handler for changing a node ID
     private Action setNodeAction() {
         Action act = new Action(Permission.READ, new SetNodeHandler());
-        act.addParameter(new Parameter("nodeID", org.dsa.iot.dslink.node.value.ValueType.STRING, node.getAttribute("nodeId")));
+        act.addParameter(new Parameter("Node ID", ValueType.STRING, node.getAttribute("nodeId")));
         return act;
     }
 
+    //handler for changing a node ID
     private class SetNodeHandler implements Handler<ActionResult> {
+        @Override
         public void handle(ActionResult event) {
-            String name = event.getParameter("nodeID", org.dsa.iot.dslink.node.value.ValueType.STRING).getString();
+            String name = event.getParameter("Node ID", ValueType.STRING).getString();
             Value val = new Value(name);
             parent.setAttribute("nodeId", val);
-            Short newId = new Short(name);
+            Short newId = Short.valueOf(name);
             LOGGER.info("New node ID: {}", newId);
         }
     }
 
+    //add the actions and setter for the data point
     private void addActions(Node child) {
-        child.setWritable(Writable.WRITE);
-        child.getListener().setValueHandler(new SetPointHandler(child));
-
         Action refresh = refreshAction(child);
         node.createChild("Refresh").setAction(refresh).build().setSerializable(false);
 
         Action request = setNodeAction();
-        node.createChild("Change nodeId").setAction(request).build().setSerializable(false);
+        node.createChild("Change Node ID").setAction(request).build().setSerializable(false);
+
+        Action act = setNameAction();
+        node.createChild("Rename").setAction(act).build().setSerializable(false);
     }
 
+    //action method to set the handler for refreshing the values of the node
     private Action refreshAction(Node child) {
-        Action act = new Action(Permission.READ, new RefreshHandler(child));
-        return act;
+        return new Action(Permission.READ, new RefreshHandler(child));
     }
 
+    //handler for refreshing the node's values
     private class RefreshHandler implements Handler<ActionResult> {
         private Node kid;
         public RefreshHandler(Node kid) {
             this.kid = kid;
         }
+        @Override
         public void handle(ActionResult event) {
             final short val = kid.getAttribute("nodeId").getNumber().shortValue();
-            conn.manager.refreshNodeInfo(homeId, val);
+            manager.refreshNodeInfo(homeId, val);
         }
     }
 
+    //handler for setting the value a data point
     private class SetPointHandler implements Handler<ValuePair> {
         private Node kid;
         public SetPointHandler(Node kid) {
             this.kid = kid;
         }
+        @Override
         public void handle(ValuePair event) {
             if (!event.isFromExternalSource()) return;
             sendValue(kid, event);
         }
     }
 
+    //action method to set the handler for renaming the node
     protected Action setNameAction() {
         Action act = new Action(Permission.READ, new SetNameHandler());
-        act.addParameter(new Parameter("name", org.dsa.iot.dslink.node.value.ValueType.STRING, new Value(node.getDisplayName())));
+        act.addParameter(new Parameter("Name", ValueType.STRING,
+                new Value(node.getDisplayName())));
         return act;
     }
 
+    //handler for renaming the node
     private class SetNameHandler implements Handler<ActionResult> {
+        @Override
         public void handle(ActionResult event) {
-            String name = event.getParameter("name", org.dsa.iot.dslink.node.value.ValueType.STRING).getString();
+            String name = event.getParameter("Name", ValueType.STRING).getString();
             rename(name);
+            LOGGER.info("New node name: {}", name);
         }
     }
 
+    //helper method to rename the node
     protected void rename(String newName) {
         ZWaveDevice zwd = duplicate(newName);
         removeAndReplace(zwd);
     }
 
+    //creates a new node with the new name
     protected ZWaveDevice duplicate(String newName) {
         Node newNode = parent.createChild(newName).build();
         newNode.setAttribute("nodeId", node.getAttribute("nodeId"));
-        ZWaveDevice zwd = new ZWaveDevice(parent, newNode, homeId, /*manager,*/ link, conn);
-        Action act = setNameAction();
-        newNode.createChild("rename").setAction(act).build().setSerializable(false);
+        ZWaveDevice zwd = new ZWaveDevice(parent, newNode, conn);
         moveAttrib(newNode);
         return zwd;
     }
 
+    //copies the attributes of the old node to the new one
     private void moveAttrib(Node newNode) {
         for (Node kid : node.getChildren().values()) {
             newNode.addChild(kid);
@@ -219,42 +217,49 @@ public class ZWaveDevice {
         }
     }
 
+    //removes the old node from the devices list and inserts the new one
     private void removeAndReplace(ZWaveDevice zwd) {
-        conn.devices.remove(node.getAttribute("nodeId").getString());
-        conn.devices.put(zwd.node.getAttribute("nodeId").getString(), zwd);
+        Map<String, ZWaveDevice> devices = conn.getDevices();
+        devices.remove(node.getAttribute("nodeId").getString());
+        devices.put(zwd.node.getAttribute("nodeId").getString(), zwd);
         parent.removeChild(node);
     }
 
+    //changes the value of a data point
     protected void changeValue(Notification notification) {
         short validClass = notification.getValueId().getCommandClassId();
         // ignore COMMAND_CLASS_BASIC (0x20) as it currently not used for USER access
         // ignored because the value is removed by ZWave before it is stored as a child
         if (validClass > (short) 0x20) {
-            String name = StringUtils.encodeName(conn.manager.getValueLabel(notification.getValueId()).replace("(%)", "(Percent)"));
+            String name = StringUtils.encodeName(manager.getValueLabel(notification.getValueId())
+                    .replace("(%)", "(Percent)"));
             Node child = node.getChild(name);
             setValue(notification.getValueId(), child);
         }
         //LOGGER.info("Value changed - " + notification.getNodeId());
     }
 
+    //remove a data point from the node
     protected void removeValue(Notification notification) {
         short validClass = notification.getValueId().getCommandClassId();
         // ignore COMMAND_CLASS_BASIC (0x20) as it currently not used for USER access
         // ignored because the value is removed by ZWave before it is stored as a child
         if (validClass > (short) 0x20) {
-            String name = StringUtils.encodeName(conn.manager.getValueLabel(notification.getValueId()).replace("(%)", "(Percent)"));
+            String name = StringUtils.encodeName(manager.getValueLabel(notification.getValueId())
+                    .replace("(%)", "(Percent)"));
             node.removeChild(name);
         }
         LOGGER.info("Value removed - " + notification.getNodeId());
     }
 
+    //get the value from ZWave and set it to the data point
     private void setValue(final ValueId valueId, Node child) {
         Value val;
         JsonArray valJson;
         switch (valueId.getType()) {
             case BOOL:
                 final AtomicReference<Boolean> b = new AtomicReference<>();
-                conn.manager.getValueAsBool(valueId, b);
+                manager.getValueAsBool(valueId, b);
                 child.setValueType(ValueType.BOOL);
                 val = new Value(b.get());
                 child.setValue(val);
@@ -263,7 +268,7 @@ public class ZWaveDevice {
                 break;
             case BYTE:
                 final AtomicReference<Short> bb = new AtomicReference<>();
-                conn.manager.getValueAsByte(valueId, bb);
+                manager.getValueAsByte(valueId, bb);
                 child.setValueType(ValueType.NUMBER);
                 val = new Value(bb.get());
                 child.setValue(val);
@@ -272,11 +277,8 @@ public class ZWaveDevice {
                 child.getListener().setValueHandler(new SetPointHandler(child));
                 break;
             case DECIMAL:
-                if (child == null) {
-
-                }
                 final AtomicReference<Float> f = new AtomicReference<>();
-                conn.manager.getValueAsFloat(valueId, f);
+                manager.getValueAsFloat(valueId, f);
                 child.setValueType(ValueType.NUMBER);
                 val = new Value(f.get());
                 child.setValue(val);
@@ -286,7 +288,7 @@ public class ZWaveDevice {
                 break;
             case INT:
                 final AtomicReference<Integer> i = new AtomicReference<>();
-                conn.manager.getValueAsInt(valueId, i);
+                manager.getValueAsInt(valueId, i);
                 child.setValueType(ValueType.NUMBER);
                 val = new Value(i.get());
                 child.setValue(val);
@@ -296,9 +298,9 @@ public class ZWaveDevice {
                 break;
             case LIST:
                 AtomicReference<String> l = new AtomicReference<>();
-                conn.manager.getValueListSelectionString(valueId, l);
+                manager.getValueListSelectionString(valueId, l);
                 List<String> ll = new ArrayList<>();
-                conn.manager.getValueListItems(valueId, ll);
+                manager.getValueListItems(valueId, ll);
                 Set<String> ls = new HashSet<>(ll);
                 child.setValueType(ValueType.makeEnum(ls));
                 val = new Value(l.get());
@@ -309,15 +311,17 @@ public class ZWaveDevice {
                 break;
             case SCHEDULE:
                 // ToDo
-                AtomicReference<Short> hrs = new AtomicReference<>();
+                //needs to be further implemented
+                //don't have a device to test this data type yet
+                /*AtomicReference<Short> hrs = new AtomicReference<>();
                 AtomicReference<Short> min = new AtomicReference<>();
                 AtomicReference<Byte> sec = new AtomicReference<>();
-                short numPoints = conn.manager.getNumSwitchPoints(valueId);
+                short numPoints = manager.getNumSwitchPoints(valueId);
                 Short[] hours = new Short[numPoints];
                 Short[] minutes = new Short[numPoints];
                 Byte[] setback = new Byte[numPoints];
                 for (short n = 0; n < numPoints; n++) {
-                    conn.manager.getSwitchPoint(valueId, n, hrs, min, sec);
+                    manager.getSwitchPoint(valueId, n, hrs, min, sec);
                     hours[n] = hrs.get();
                     minutes[n] = min.get();
                     setback[n] = sec.get();
@@ -325,11 +329,12 @@ public class ZWaveDevice {
 
                 child.setValueType(ValueType.STRING);
                 val = new Value("null");
-                child.setValue(val);
+                child.setValue(val);*/
+                LOGGER.error("ZWave Value Type SCHEDULE is not implemented yet");
                 break;
             case SHORT:
                 AtomicReference<Short> s = new AtomicReference<>();
-                conn.manager.getValueAsShort(valueId, s);
+                manager.getValueAsShort(valueId, s);
                 child.setValueType(ValueType.NUMBER);
                 val = new Value(s.get());
                 child.setValue(val);
@@ -339,7 +344,7 @@ public class ZWaveDevice {
                 break;
             case STRING:
                 final AtomicReference<String> ss = new AtomicReference<>();
-                conn.manager.getValueAsString(valueId, ss);
+                manager.getValueAsString(valueId, ss);
                 child.setValueType(ValueType.STRING);
                 val = new Value(ss.get());
                 child.setValue(val);
@@ -349,21 +354,22 @@ public class ZWaveDevice {
                 break;
             case BUTTON:
                 // ToDo
-                AtomicReference<Boolean> bt = new AtomicReference<>();
-                conn.manager.getValueAsBool(valueId, bt);
+                /*AtomicReference<Boolean> bt = new AtomicReference<>();
+                manager.getValueAsBool(valueId, bt);
                 child.setValueType(ValueType.BOOL);
                 val = new Value(bt.get());
                 child.setValue(val);
 
                 child.setWritable(Writable.WRITE);
-                child.getListener().setValueHandler(new SetPointHandler(child));
+                child.getListener().setValueHandler(new SetPointHandler(child));*/
+                LOGGER.error("ZWave Value Type BUTTON is not implemented yet");
                 break;
             case RAW:
                 final AtomicReference<short[]> sss = new AtomicReference<>();
-                conn.manager.getValueAsRaw(valueId, sss);
+                manager.getValueAsRaw(valueId, sss);
                 valJson = new JsonArray();
                 short[] shorts = sss.get();
-                for (int j = 0; j < shorts.length; j++) {
+                for (int j : shorts) {
                     valJson.addNumber(shorts[j]);
                 }
                 child.setValueType(ValueType.ARRAY);
@@ -380,6 +386,7 @@ public class ZWaveDevice {
         //LOGGER.info("Value set - " + valueId.getNodeId());
     }
 
+    //set the user-enetered value of a data point
     private void sendValue(Node kid, ValuePair event) {
         ValueId valId;
         String type = kid.getAttribute("type").getString();
@@ -393,7 +400,7 @@ public class ZWaveDevice {
                         kid.getAttribute("instance").getNumber().shortValue(),
                         kid.getAttribute("index").getNumber().shortValue(),
                         org.zwave4j.ValueType.BOOL);
-                conn.manager.setValueAsBool(valId, entryBool);
+                manager.setValueAsBool(valId, entryBool);
                 break;
             case "BYTE":
                 final byte entryByte = event.getCurrent().getNumber().byteValue();
@@ -404,7 +411,7 @@ public class ZWaveDevice {
                         kid.getAttribute("instance").getNumber().shortValue(),
                         kid.getAttribute("index").getNumber().shortValue(),
                         org.zwave4j.ValueType.BYTE);
-                conn.manager.setValueAsByte(valId, entryByte);
+                manager.setValueAsByte(valId, entryByte);
                 break;
             case "DECIMAL":
                 float entryDecimal = event.getCurrent().getNumber().floatValue();
@@ -415,7 +422,7 @@ public class ZWaveDevice {
                         kid.getAttribute("instance").getNumber().shortValue(),
                         kid.getAttribute("index").getNumber().shortValue(),
                         org.zwave4j.ValueType.DECIMAL);
-                conn.manager.setValueAsFloat(valId, entryDecimal);
+                manager.setValueAsFloat(valId, entryDecimal);
                 break;
             case "INT":
                 final int entryInt = event.getCurrent().getNumber().intValue();
@@ -426,7 +433,7 @@ public class ZWaveDevice {
                         kid.getAttribute("instance").getNumber().shortValue(),
                         kid.getAttribute("index").getNumber().shortValue(),
                         org.zwave4j.ValueType.INT);
-                conn.manager.setValueAsInt(valId, entryInt);
+                manager.setValueAsInt(valId, entryInt);
                 break;
             case "LIST":
                 String entryList = event.getCurrent().getString();
@@ -437,11 +444,13 @@ public class ZWaveDevice {
                         kid.getAttribute("instance").getNumber().shortValue(),
                         kid.getAttribute("index").getNumber().shortValue(),
                         org.zwave4j.ValueType.LIST);
-                conn.manager.setValueListSelection(valId, entryList);
+                manager.setValueListSelection(valId, entryList);
                 break;
             case "SCHEDULE":
                 // ToDo
-                short hours = event.getCurrent().getNumber().shortValue();
+                //this ZWave data type is not fully implemented (device that uses this type was
+                //not available during development)
+                /*short hours = event.getCurrent().getNumber().shortValue();
                 short minutes = event.getCurrent().getNumber().shortValue();
                 byte setback = event.getCurrent().getNumber().byteValue();
                 valId = new ValueId(homeId,
@@ -451,7 +460,8 @@ public class ZWaveDevice {
                         kid.getAttribute("instance").getNumber().shortValue(),
                         kid.getAttribute("index").getNumber().shortValue(),
                         org.zwave4j.ValueType.SCHEDULE);
-                conn.manager.setSwitchPoint(valId, hours, minutes, setback);
+                manager.setSwitchPoint(valId, hours, minutes, setback);*/
+                LOGGER.error("Setting an unimplemented ZWave data type - SCHEDULE");
                 break;
             case "SHORT":
                 short entryShort = event.getCurrent().getNumber().shortValue();
@@ -462,7 +472,7 @@ public class ZWaveDevice {
                         kid.getAttribute("instance").getNumber().shortValue(),
                         kid.getAttribute("index").getNumber().shortValue(),
                         org.zwave4j.ValueType.SHORT);
-                conn.manager.setValueAsInt(valId, entryShort);
+                manager.setValueAsInt(valId, entryShort);
                 break;
             case "STRING":
                 String entryString = event.getCurrent().getString();
@@ -473,10 +483,12 @@ public class ZWaveDevice {
                         kid.getAttribute("instance").getNumber().shortValue(),
                         kid.getAttribute("index").getNumber().shortValue(),
                         org.zwave4j.ValueType.STRING);
-                conn.manager.setValueAsString(valId, entryString);
+                manager.setValueAsString(valId, entryString);
                 break;
             case "BUTTON":
-                boolean entryButton = event.getCurrent().getBool();
+                //this ZWave data type is not implemented (device that uses this data
+                //type was not available during development
+                /*boolean entryButton = event.getCurrent().getBool();
                 valId = new ValueId(homeId,
                         kid.getAttribute("nodeId").getNumber().shortValue(),
                         returnGenre(kid),
@@ -485,10 +497,12 @@ public class ZWaveDevice {
                         kid.getAttribute("index").getNumber().shortValue(),
                         org.zwave4j.ValueType.BUTTON);
                 if (entryButton) {
-                    conn.manager.pressButton(valId);
+                    manager.pressButton(valId);
                 } else {
-                    conn.manager.releaseButton(valId);
-                }
+                    manager.releaseButton(valId);
+                }*/
+                LOGGER.error("Setting an unimplemented ZWave data type - BUTTON");
+                break;
             case "RAW":
                 JsonArray entryJson = event.getCurrent().getArray();
                 final short[] shorts = new short[entryJson.size()];
@@ -502,7 +516,7 @@ public class ZWaveDevice {
                         kid.getAttribute("instance").getNumber().shortValue(),
                         kid.getAttribute("index").getNumber().shortValue(),
                         org.zwave4j.ValueType.RAW);
-                conn.manager.setValueAsRaw(valId, shorts);
+                manager.setValueAsRaw(valId, shorts);
                 break;
             default:
                 LOGGER.info("sendValue - unknown org.zwave4j.ValueType");
@@ -510,6 +524,7 @@ public class ZWaveDevice {
         LOGGER.info("Value sent - " + kid.getAttribute("nodeId"));
     }
 
+    //helper method that returns the ValueGenre of a ZWave data point
     protected ValueGenre returnGenre (Node child) {
         LOGGER.info("Returned genre - " + child.getAttribute("nodeId"));
         switch (child.getAttribute("genre").toString()) {
@@ -528,6 +543,4 @@ public class ZWaveDevice {
                 return null;
         }
     }
-
-    private ZWaveDevice getMe() { return this; }
 }
